Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #2220: ModifiedSearchWidget validation issues
- #2218: Validation errors for file objects coming from a datamodel
- #1998: fixed some rarely executed internal logic
- #2232: Make TinyMCE use CPS CSS files in the content render view
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 